@@ -146,7 +146,7 @@ static void write_procformatstring(type_t *iface)
     unsigned int type_offset = 2;
     int in_attr, out_attr;
 
-    print_server("static const MIDL_PROC_FORMAT_STRING __MIDL_ProcFormatString =\n");
+    print_server("const MIDL_PROC_FORMAT_STRING __MIDL_ProcFormatString =\n");
     print_server("{\n");
     indent++;
     print_server("0,\n");
@@ -282,7 +282,7 @@ static void write_typeformatstring(type_t *iface)
     int string_attr;
     int ptr_attr, ref_attr, unique_attr;
 
-    print_server("static const MIDL_TYPE_FORMAT_STRING __MIDL_TypeFormatString =\n");
+    print_server("const MIDL_TYPE_FORMAT_STRING __MIDL_TypeFormatString =\n");
     print_server("{\n");
     indent++;
     print_server("0,\n");
@@ -1466,7 +1466,7 @@ static void write_stubdescdecl(type_t *iface)
 
 static void write_stubdescriptor(type_t *iface)
 {
-    print_server("static const MIDL_STUB_DESC %s_StubDesc =\n", iface->name);
+    print_server("const MIDL_STUB_DESC %s_StubDesc =\n", iface->name);
     print_server("{\n");
     indent++;
     print_server("(void __RPC_FAR *)& %s___RpcServerInterface,\n", iface->name);
